Setup: Updated default analytics pages

--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -52,16 +52,16 @@ The {{< var validmind.platform >}} provides two default report pages to get you 
 :::
 
 ::: {.w-40-ns}
-2. **Findings** 
+2. **Validation Issues** 
 
-![Analytics `Findings` report page](analytics-findings.png){fig-alt="Screenshot of the Analytics `Findings` report page" .screenshot group="reports"}
+![Analytics `Validation Issues` report page](analytics-findings.png){fig-alt="Screenshot of the Analytics `Findings` report page" .screenshot group="reports"}
 
 :::
 
 ::::
 
 ::: {.callout-important}
-Default analytics pages cannot be modified.
+By default, Models and Validation Issues analytics pages can only be modified by the [Customer Admin]{.bubble} user role.[^3]
 :::
 
 ::: {.panel-tabset}
@@ -72,7 +72,7 @@ Total Models
 : Count of your total models registered with {{< var vm.product >}}.
 
 Number of Models by Business Unit and Tier
-: Count of your model volume by business unit[^3] further broken down by risk tier. Assists you in pinpointing where in the organization resources should be concentrated on, along with the materiality of risk that unit may pose based on the models they are responsible for. 
+: Count of your model volume by business unit[^4] further broken down by risk tier. Assists you in pinpointing where in the organization resources should be concentrated on, along with the materiality of risk that unit may pose based on the models they are responsible for. 
 
 Number of Models by Status and Business Unit
 : Count of your model volume by status further broken down by business unit. Assists you in pinpointing where in the organization resources may need to be focused, based on the progress and severity of findings. 
@@ -102,11 +102,11 @@ Findings by Model
 ## Arrange report widgets
 
 :::{.callout-important title="Changes are automatically saved and will affect all other users in your organization."}
-You can also add any of the report widgets to your personal dashboard.[^4]
+You can also add any of the report widgets to your personal dashboard.[^5]
 
 :::
 
-Rearrange report widgets on your custom analytics pages:[^5]
+Rearrange report widgets on your custom analytics pages:[^6]
 
 1. In the left sidebar, click **{{< fa square-poll-vertical >}} Analytics**.
 
@@ -133,8 +133,10 @@ Rearrange report widgets on your custom analytics pages:[^5]
 
 [^2]: [Add and manage model findings](/guide/model-validation/add-manage-model-findings.qmd)
 
-[^3]: [Manage business units](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
+[^3]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
-[^4]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd#manage-widgets)
+[^4]: [Manage business units](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
 
-[^5]: [Manage custom reports](manage-custom-reports.qmd#add-custom-analytics)
+[^5]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd#manage-widgets)
+
+[^6]: [Manage custom reports](manage-custom-reports.qmd#add-custom-analytics)
