Adjusting wording pt1

--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -54,7 +54,7 @@ The {{< var validmind.platform >}} provides two default report pages to get you 
 ::: {.w-40-ns}
 2. **Validation Issues** 
 
-![Analytics `Validation Issues` report page](analytics-findings.png){fig-alt="Screenshot of the Analytics `Findings` report page" .screenshot group="reports"}
+![Analytics `Validation Issues` report page](analytics-validation_issues.png){fig-alt="Screenshot of the Analytics `Validation Issues` report page" .screenshot group="reports"}
 
 :::
 
@@ -74,27 +74,27 @@ Total Models
 Number of Models by Business Unit and Tier
 : Count of your model volume by business unit[^4] further broken down by risk tier. Assists you in pinpointing where in the organization resources should be concentrated on, along with the materiality of risk that unit may pose based on the models they are responsible for. 
 
-Number of Models by Status and Business Unit
+Number of Models by Stage and Business Unit
 : Count of your model volume by status further broken down by business unit. Assists you in pinpointing where in the organization resources may need to be focused, based on the progress and severity of findings. 
 
-Avg. Number of Days Models Spend in a Status
+Avg. Number of Days Models Spend in a Stage
 : Average count of days your models spend in a certain status further broken down by business unit. Assists you in pinpointing what point of your model risk management process resources should be concentrated on, along with where in the organization your resources should be allotted to. 
 
-#### 2. Reports on findings
+#### 2. Reports on validation issues
 
-Total Findings, Open Findings, Closed Findings, Past Due Findings
+Total Validation Issues, Open Validation Issues, Closed Validation Issues, Past Due Validation Issues
 : Count of your total findings, currently open findings, currently past due findings, and previous findings now closed.
 
-Findings by Risk Area
+Validation Issues by Risk Area
 : Identifies issues based on the type of risk they pose to the organization, such as model limitations, data quality issues, regulatory compliance, and more. Helps in understanding the risk landscape for your models and risk areas requiring attention or improvement.
 
-Findings by Status
+Validation Issues by Status
 : Sorts findings based on their resolution status, such as open, closed, or past due. Provides a snapshot of the validation process, highlighting which issues have been addressed, which are currently being worked on, and which are yet to be tackled.
 
-Findings by Business Unit
+Validation Issues by Business Unit
 : Segmented according to different divisions or departments within your organization, such as Finance, Marketing, and more. Assists you in pinpointing where in the organization model-related issues are occurring, facilitating more targeted resolution, if necessary.
 
-Findings by Model
+Validation Issues by Model
 : Specific to individual models, details the findings for each model, including any errors, limitations, or assumptions that may affect the model's performance. This helps in assessing the reliability and accuracy of each model.
 
 :::
