--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -75,10 +75,10 @@ Number of Models by Business Unit and Tier
 : Count of your model volume by business unit[^4] further broken down by risk tier. Assists you in pinpointing where in the organization resources should be concentrated on, along with the materiality of risk that unit may pose based on the models they are responsible for. 
 
 Number of Models by Stage and Business Unit
-: Count of your model volume by status further broken down by business unit. Assists you in pinpointing where in the organization resources may need to be focused, based on the progress and severity of findings. 
+: Count of your model volume by stage further broken down by business unit. Assists you in pinpointing where in the organization resources may need to be focused, based on the progress and severity of findings. 
 
 Avg. Number of Days Models Spend in a Stage
-: Average count of days your models spend in a certain status further broken down by business unit. Assists you in pinpointing what point of your model risk management process resources should be concentrated on, along with where in the organization your resources should be allotted to. 
+: Average count of days your models spend in a certain stage further broken down by business unit. Assists you in pinpointing what point of your model risk management process resources should be concentrated on, along with where in the organization your resources should be allotted to. 
 
 #### 2. Reports on validation issues
 
