--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -34,7 +34,7 @@ Reports are primarily designed for model validators or Chief Risk Officers (CROs
 
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^1]
-- [x] There are findings logged on any model.[^2]
+- [x] There are validation issue type findings logged on any model.[^2]
 
 :::
 
@@ -75,7 +75,7 @@ Number of Models by Business Unit and Tier
 : Count of your model volume by business unit[^4] further broken down by risk tier. Assists you in pinpointing where in the organization resources should be concentrated on, along with the materiality of risk that unit may pose based on the models they are responsible for. 
 
 Number of Models by Stage and Business Unit
-: Count of your model volume by stage further broken down by business unit. Assists you in pinpointing where in the organization resources may need to be focused, based on the progress and severity of findings. 
+: Count of your model volume by stage[^5] further broken down by business unit. Assists you in pinpointing where in the organization resources may need to be focused, based on the progress and severity of findings. 
 
 Avg. Number of Days Models Spend in a Stage
 : Average count of days your models spend in a certain stage further broken down by business unit. Assists you in pinpointing what point of your model risk management process resources should be concentrated on, along with where in the organization your resources should be allotted to. 
@@ -83,19 +83,19 @@ Avg. Number of Days Models Spend in a Stage
 #### 2. Reports on validation issues
 
 Total Validation Issues, Open Validation Issues, Closed Validation Issues, Past Due Validation Issues
-: Count of your total findings, currently open findings, currently past due findings, and previous findings now closed.
+: Count of your total validation issue type findings,[^6] currently open validation issues, currently past due validation issues, and previous validation issues now closed.
 
 Validation Issues by Risk Area
 : Identifies issues based on the type of risk they pose to the organization, such as model limitations, data quality issues, regulatory compliance, and more. Helps in understanding the risk landscape for your models and risk areas requiring attention or improvement.
 
 Validation Issues by Status
-: Sorts findings based on their resolution status, such as open, closed, or past due. Provides a snapshot of the validation process, highlighting which issues have been addressed, which are currently being worked on, and which are yet to be tackled.
+: Sorts validation issue type findings based on their resolution status, such as open, closed, or past due. Provides a snapshot of the validation process, highlighting which issues have been addressed, which are currently being worked on, and which are yet to be tackled.
 
 Validation Issues by Business Unit
 : Segmented according to different divisions or departments within your organization, such as Finance, Marketing, and more. Assists you in pinpointing where in the organization model-related issues are occurring, facilitating more targeted resolution, if necessary.
 
 Validation Issues by Model
-: Specific to individual models, details the findings for each model, including any errors, limitations, or assumptions that may affect the model's performance. This helps in assessing the reliability and accuracy of each model.
+: Specific to individual models, details the validation issue type findings for each model, including any errors, limitations, or assumptions that may affect the model's performance. This helps in assessing the reliability and accuracy of each model.
 
 :::
 
@@ -137,6 +137,16 @@ Rearrange report widgets on your custom analytics pages:[^6]
 
 [^4]: [Manage business units](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
 
+[^5]: [Manage model stages](/guide/workflows/manage-model-stages.qmd)
+
+[^6]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd#available-finding-types)
+
+<!-- HERE -->
+
+<!-- 
+
 [^5]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd#manage-widgets)
 
-[^6]: [Manage custom reports](manage-custom-reports.qmd#add-custom-analytics)
+[^6]: [Manage custom reports](manage-custom-reports.qmd#add-custom-analytics) 
+
+-->
