--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -102,11 +102,11 @@ Validation Issues by Model
 ## Arrange report widgets
 
 :::{.callout-important title="Changes are automatically saved and will affect all other users in your organization."}
-You can also add any of the report widgets to your personal dashboard.[^5]
+You can also add any of the report widgets to your personal dashboard.[^7]
 
 :::
 
-Rearrange report widgets on your custom analytics pages:[^6]
+Rearrange report widgets on your analytics pages, including your custom pages:[^8]
 
 1. In the left sidebar, click **{{< fa square-poll-vertical >}} Analytics**.
 
@@ -118,7 +118,9 @@ Rearrange report widgets on your custom analytics pages:[^6]
 
 5. Click and drag to position your widget as desired.
 
-    To resize a widget, hover over the bottom-right corner of a widget until the **{{< fa hand>}}** appears, then adjust the dimensions to your liking. 
+    To resize a widget, hover over the bottom-right corner of a widget until the **{{< fa hand>}}** appears, then adjust the dimensions to your liking.
+
+6. Click **Done Editing** to save your changes.
 
 
 ## Manage analytics
@@ -141,12 +143,6 @@ Rearrange report widgets on your custom analytics pages:[^6]
 
 [^6]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd#available-finding-types)
 
-<!-- HERE -->
+[^7]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd#manage-widgets)
 
-<!-- 
-
-[^5]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd#manage-widgets)
-
-[^6]: [Manage custom reports](manage-custom-reports.qmd#add-custom-analytics) 
-
--->
+[^8]: [Manage custom reports](manage-custom-reports.qmd#add-custom-analytics)
