Edit: Manage custom reports

--- a/site/guide/reporting/_create-a-visualization.qmd
+++ b/site/guide/reporting/_create-a-visualization.qmd
@@ -1,4 +1,6 @@
 :::: {.content-visible unless-format="revealjs"}
+If your analytics page is newly created, skip to **Step c.**
+
 a. On **{{< fa square-poll-vertical >}} Analytics**, click on the tab for your custom page you'd like to add a visualization to. 
 
 a. Click **{{< fa pencil >}} Edit Dashboard**.
@@ -15,8 +17,11 @@ a. Select a **[visualization type]{.smallcaps}**:
 
 a. Select a **[dataset]{.smallcaps}**:
 
-    - **Findings**^[[Working with model findings](/guide/model-validation/working-with-model-findings.qmd)]
-    - **Inventory Models**^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)]
+    - **Findings** — All finding types.^[[Working with model findings](/guide/model-validation/working-with-model-findings.qmd)]
+    - **Inventory Models** — Models logged in your inventory.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)]
+    - Model Limitations — Model Limitation type findings only.^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)]
+    - Policy Exceptions — Policy Exception type findings only.
+    - Validation Issues — Validation Issue type findings only.
 
 a. Select the visualization configuration options to apply to the dataset.^[[Visualization configuration options](/guide/reporting/manage-custom-reports.qmd#visualization-configuration-options)]
 
@@ -49,10 +54,6 @@ For example, to create an open findings visualization in stacked bar chart forma
 
 
 :::: {.content-hidden unless-format="revealjs"}
-a. On **{{< fa square-poll-vertical >}} Analytics**, click on the tab for your custom page you'd like to add a visualization to. 
-
-a. Click **{{< fa pencil >}} Edit Dashboard**.
-
 a. Select **{{< fa plus >}} Add Widget** then **{{< fa plus >}} Add Visualization**.
 
 a. On the Add Visualization panel, enter in your **[title]{.smallcaps}**.
@@ -65,8 +66,11 @@ a. Select a **[visualization type]{.smallcaps}**:
 
 a. Select a **[dataset]{.smallcaps}**:
 
-    - **[Findings](/guide/model-validation/working-with-model-findings.qmd){target="_blank"}**
-    - **[Inventory Models](/guide/model-inventory/working-with-model-inventory.qmd){target="_blank"}**
+    - **Findings** — [All finding types](/guide/model-validation/working-with-model-findings.qmd){target="_blank"}.
+    - **Inventory Models** — [Models logged in your inventory](/guide/model-inventory/working-with-model-inventory.qmd){target="_blank"}.
+    - Model Limitations — Model Limitation type findings only.
+    - Policy Exceptions — Policy Exception type findings only.
+    - Validation Issues — Validation Issue type findings only.
 
 a. Select the [visualization configuration options](/guide/reporting/manage-custom-reports.qmd#visualization-configuration-options){target="_blank"} to apply to the dataset.
 
