--- a/site/guide/reporting/_create-an-analytics-page.qmd
+++ b/site/guide/reporting/_create-an-analytics-page.qmd
@@ -5,6 +5,6 @@ a. Click **{{< fa plus >}} Add Page**.
 a. On the Add New Page module, enter in the:
 
     - **[page name]{.smallcaps}**
-    - **[description]{.smallcaps}**
+    - (Optional) **[description]{.smallcaps}**
 
 a. Click **Add New Page** to create your custom analytics page. 
