--- a/site/guide/reporting/_create-a-visualization.qmd
+++ b/site/guide/reporting/_create-a-visualization.qmd
@@ -1,5 +1,7 @@
 :::: {.content-visible unless-format="revealjs"}
+::: {.callout}
 If your analytics page is newly created, skip to **Step c.**
+:::
 
 a. On **{{< fa square-poll-vertical >}} Analytics**, click on the tab for your custom page you'd like to add a visualization to. 
 
@@ -17,35 +19,35 @@ a. Select a **[visualization type]{.smallcaps}**:
 
 a. Select a **[dataset]{.smallcaps}**:
 
-    - **Findings** — All finding types.^[[Working with model findings](/guide/model-validation/working-with-model-findings.qmd)]
+    - **Findings** — All finding types logged on models.^[[Working with model findings](/guide/model-validation/working-with-model-findings.qmd)]
     - **Inventory Models** — Models logged in your inventory.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)]
-    - Model Limitations — Model Limitation type findings only.^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)]
-    - Policy Exceptions — Policy Exception type findings only.
-    - Validation Issues — Validation Issue type findings only.
+    - **Model Limitations** — Logged Model Limitation type findings only.^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)]
+    - **Policy Exceptions** — Logged Policy Exception type findings only.
+    - **Validation Issues** — Logged Validation Issue type findings only.
 
 a. Select the visualization configuration options to apply to the dataset.^[[Visualization configuration options](/guide/reporting/manage-custom-reports.qmd#visualization-configuration-options)]
 
 a. When you are done configuring your dataset, click **Add Visualization** to insert your custom widget onto the analytics page.
 
-For example, to create an open findings visualization in stacked bar chart format, for average severity level, grouped by business unit (x-axis) and risk area (y-axis), you would set:
+For example, to create an open findings visualization in stacked bar chart format for all findings logged, for average severity level, grouped by business unit (x-axis) and risk area (y-axis), you would set:
 
 - **[visualization type]{.smallcaps}** — `Bar Chart`
 - **[dataset]{.smallcaps}** — `Findings`
-- **[metrics]{.smallcaps}** — `Severity Level`, `Average` 
-- **[grouping]{.smallcaps}** — `Business Unit Name`, `Risk Area Name` 
-- **[filtering]{.smallcaps}** — `Finding Status Name`, `is not`, `Closed`
-- **[bar chart grouping style]{.smallcaps}** — `Stacked` 
+- **[metrics]{.smallcaps}** — `Severity Level`, `Average`
+- **[grouping]{.smallcaps}** — `Business Unit Name`, `Risk Area Name`
+- **[filtering]{.smallcaps}** — `Finding Status Name`, `is`, `Open`
+- **[bar chart grouping style]{.smallcaps}** — `Stacked`
 
 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-![Example setup for a stacked bar chart](/guide/reporting/custom-visualization-setup.png){fig-alt="Screenshot of an example setup for a stacked bar chart" .screenshot group="bar-chart"}
+![Example setup for a stacked bar chart](/guide/reporting/configure_custom-visualization.png){fig-alt="Screenshot of an example setup for a stacked bar chart" .screenshot group="bar-chart"}
 
 :::
 
 ::: {.w-40-ns}
-![Example y-axis on a custom bar chart](/guide/reporting/example-custom-visualization.png){fig-alt="Screenshot of an example y-axis on a custom bar chart" .screenshot group="bar-chart"}
+![Example y-axis on a custom bar chart](/guide/reporting/example_custom-visualization.png){fig-alt="Screenshot of an example y-axis on a custom bar chart" .screenshot group="bar-chart"}
 
 :::
 
@@ -66,11 +68,11 @@ a. Select a **[visualization type]{.smallcaps}**:
 
 a. Select a **[dataset]{.smallcaps}**:
 
-    - **Findings** — [All finding types](/guide/model-validation/working-with-model-findings.qmd){target="_blank"}.
+    - **Findings** — [All finding types logged on models](/guide/model-validation/working-with-model-findings.qmd){target="_blank"}.
     - **Inventory Models** — [Models logged in your inventory](/guide/model-inventory/working-with-model-inventory.qmd){target="_blank"}.
-    - Model Limitations — Model Limitation type findings only.
-    - Policy Exceptions — Policy Exception type findings only.
-    - Validation Issues — Validation Issue type findings only.
+    - **Model Limitations** — Logged Model Limitation type findings only.
+    - **Policy Exceptions** — Logged Policy Exception type findings only.
+    - **Validation Issues** — Logged Validation Issue type findings only.
 
 a. Select the [visualization configuration options](/guide/reporting/manage-custom-reports.qmd#visualization-configuration-options){target="_blank"} to apply to the dataset.
 
