--- a/site/guide/configuration/customize-your-dashboard.qmd
+++ b/site/guide/configuration/customize-your-dashboard.qmd
@@ -98,9 +98,11 @@ Retrieve a list of the latest model findings[^5] or recent activity.[^6]
 
 4.  Hover over the title of a widget until the **{{< fa hand>}}** appears.
 
-2. Click and drag to position your widget as desired.
+5. Click and drag to position your widget as desired.
 
-    To resize a widget, hover over the bottom-right corner of a widget until the **{{< fa hand>}}** appears, then adjust the dimensions to your liking. 
+    To resize a widget, hover over the bottom-right corner of a widget until the **{{< fa hand>}}** appears, then adjust the dimensions to your liking.
+
+6. Click **Done Editing** to exit the editor.
 
 ### Add widgets
 
@@ -126,9 +128,11 @@ Retrieve a list of the latest model findings[^5] or recent activity.[^6]
     - **Analytics Visualization** — Select an **[analytics page]{.smallcaps}** and a **[visualization]{.smallcaps}** then click **Add Visualization**.
     - **Other** — Select one of the **[widgets]{.smallcaps}** then click **Add Widget**.
 
-7. Confirm that your widget appears as expected. 
+7. Confirm that your widget appears as expected.
 
     You can also rearrange the position of the widget to your liking.[^8]
+
+8. Click **Done Editing** to exit the editor.
 
 ### Remove widgets
 
@@ -148,6 +152,8 @@ Removing a widget from a dashboard will not delete the linked view or analytics 
 5. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select [**{{< fa trash-can >}} Remove**]{.red}.
 
 6. After you confirm, your widget will be removed from your dashboard.
+
+7. Click **Done Editing** to exit the editor.
 
 
 <!-- FOOTNOTES -->
