--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -120,7 +120,7 @@ Rearrange report widgets on your analytics pages, including your custom pages:[^
 
     To resize a widget, hover over the bottom-right corner of a widget until the **{{< fa hand>}}** appears, then adjust the dimensions to your liking.
 
-6. Click **Done Editing** to save your changes.
+6. Click **Done Editing** to exit the editor.
 
 
 ## Manage analytics
