--- a/site/guide/reporting/_view-report-data.qmd
+++ b/site/guide/reporting/_view-report-data.qmd
@@ -11,8 +11,8 @@ Reports will not include data or findings from archived models.^[[Archive and de
 
     For example, to see all findings related to specific risk area:
 
-    a. Click on the **Findings** tab. 
-    b. Under **Findings by Risk Area**, click on the risk area you want more details for.
+    a. Click on the **Validation Issues** tab.
+    b. Under **Validation Issues by Risk Area**, click on the risk area you want more details for.
     c. On the page that opens, the applicable findings are listed:
         - Filter this list of findings^[[Filter and sort model findings](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings)]
         - Or customize column headers that display on this findings view^[[Customize model findings layouts](/guide/model-validation/customize-model-findings-layouts.qmd)]
@@ -30,8 +30,8 @@ Reports will not include data or findings from archived models.^[[Archive and de
 
     For example, to see all findings related to specific risk area:
 
-    a. Click on the **Findings** tab.
-    b. Under **Findings by Risk Area**, click on the risk area you want more details for.
+    a. Click on the **Validation Issues** tab.
+    b. Under **Validation Issues by Risk Area**, click on the risk area you want more details for.
     c. On the page that opens, the applicable findings are listed:
         - [Filter this list of findings](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings){target="_blank"}
         - Or customize column headers that display on this [findings view](/guide/model-validation/customize-model-findings-layouts.qmd){target="_blank"}
