--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -165,7 +165,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 Here, you can find executive summaries, track information on models, findings, and more.
 
 ::: {.embed}
-Default report widgets are provided in the **Models** and **Findings** dashboards.
+Default report widgets are provided in the **Models** and **Validation Issues** dashboards.
 
 You can supplement these with your own custom reports in additional dashboards to suit your organizational needs.
 
