Remove files now pulled from release-notes repo & add release-notes.html alias

--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -45,6 +45,8 @@ listing:
       - ../releases/frontend/**/pr*.qmd
       - ../releases/documentation/**/pr*.qmd
       - ../releases/validmind-library/**/pr*.qmd
+  aliases:
+    - /releases/release-notes.html
 ---
 
 ## Current releases
