Add one more release-notes.html alias

--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -47,6 +47,7 @@ listing:
       - ../releases/validmind-library/**/pr*.qmd
   aliases:
     - /releases/release-notes.html
+    - /release-notes.html
 ---
 
 ## Current releases
