docs: Updated analytics dashboards (#1023)
* Setup: Updated default analytics pages

* Adjusting wording pt1

* Save point

* Save point

* Draft done: Working with analytics

* Edit: Manage custom reports

* Manage custom reports: Updating example

* Proofreading

* Training

--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -34,7 +34,7 @@ Reports are primarily designed for model validators or Chief Risk Officers (CROs
 
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^1]
-- [x] There are findings logged on any model.[^2]
+- [x] There are validation issue type findings logged on any model.[^2]
 
 :::
 
@@ -52,16 +52,16 @@ The {{< var validmind.platform >}} provides two default report pages to get you 
 :::
 
 ::: {.w-40-ns}
-2. **Findings** 
+2. **Validation Issues** 
 
-![Analytics `Findings` report page](analytics-findings.png){fig-alt="Screenshot of the Analytics `Findings` report page" .screenshot group="reports"}
+![Analytics `Validation Issues` report page](analytics-validation_issues.png){fig-alt="Screenshot of the Analytics `Validation Issues` report page" .screenshot group="reports"}
 
 :::
 
 ::::
 
 ::: {.callout-important}
-Default analytics pages cannot be modified.
+By default, Models and Validation Issues analytics pages can only be modified by the [Customer Admin]{.bubble} user role.[^3]
 :::
 
 ::: {.panel-tabset}
@@ -72,41 +72,41 @@ Total Models
 : Count of your total models registered with {{< var vm.product >}}.
 
 Number of Models by Business Unit and Tier
-: Count of your model volume by business unit[^3] further broken down by risk tier. Assists you in pinpointing where in the organization resources should be concentrated on, along with the materiality of risk that unit may pose based on the models they are responsible for. 
+: Count of your model volume by business unit[^4] further broken down by risk tier. Assists you in pinpointing where in the organization resources should be concentrated on, along with the materiality of risk that unit may pose based on the models they are responsible for. 
 
-Number of Models by Status and Business Unit
-: Count of your model volume by status further broken down by business unit. Assists you in pinpointing where in the organization resources may need to be focused, based on the progress and severity of findings. 
+Number of Models by Stage and Business Unit
+: Count of your model volume by stage[^5] further broken down by business unit. Assists you in pinpointing where in the organization resources may need to be focused, based on the progress and severity of findings. 
 
-Avg. Number of Days Models Spend in a Status
-: Average count of days your models spend in a certain status further broken down by business unit. Assists you in pinpointing what point of your model risk management process resources should be concentrated on, along with where in the organization your resources should be allotted to. 
+Avg. Number of Days Models Spend in a Stage
+: Average count of days your models spend in a certain stage further broken down by business unit. Assists you in pinpointing what point of your model risk management process resources should be concentrated on, along with where in the organization your resources should be allotted to. 
 
-#### 2. Reports on findings
+#### 2. Reports on validation issues
 
-Total Findings, Open Findings, Closed Findings, Past Due Findings
-: Count of your total findings, currently open findings, currently past due findings, and previous findings now closed.
+Total Validation Issues, Open Validation Issues, Closed Validation Issues, Past Due Validation Issues
+: Count of your total validation issue type findings,[^6] currently open validation issues, currently past due validation issues, and previous validation issues now closed.
 
-Findings by Risk Area
+Validation Issues by Risk Area
 : Identifies issues based on the type of risk they pose to the organization, such as model limitations, data quality issues, regulatory compliance, and more. Helps in understanding the risk landscape for your models and risk areas requiring attention or improvement.
 
-Findings by Status
-: Sorts findings based on their resolution status, such as open, closed, or past due. Provides a snapshot of the validation process, highlighting which issues have been addressed, which are currently being worked on, and which are yet to be tackled.
+Validation Issues by Status
+: Sorts validation issue type findings based on their resolution status, such as open, closed, or past due. Provides a snapshot of the validation process, highlighting which issues have been addressed, which are currently being worked on, and which are yet to be tackled.
 
-Findings by Business Unit
+Validation Issues by Business Unit
 : Segmented according to different divisions or departments within your organization, such as Finance, Marketing, and more. Assists you in pinpointing where in the organization model-related issues are occurring, facilitating more targeted resolution, if necessary.
 
-Findings by Model
-: Specific to individual models, details the findings for each model, including any errors, limitations, or assumptions that may affect the model's performance. This helps in assessing the reliability and accuracy of each model.
+Validation Issues by Model
+: Specific to individual models, details the validation issue type findings for each model, including any errors, limitations, or assumptions that may affect the model's performance. This helps in assessing the reliability and accuracy of each model.
 
 :::
 
 ## Arrange report widgets
 
 :::{.callout-important title="Changes are automatically saved and will affect all other users in your organization."}
-You can also add any of the report widgets to your personal dashboard.[^4]
+You can also add any of the report widgets to your personal dashboard.[^7]
 
 :::
 
-Rearrange report widgets on your custom analytics pages:[^5]
+Rearrange report widgets on your analytics pages, including your custom pages:[^8]
 
 1. In the left sidebar, click **{{< fa square-poll-vertical >}} Analytics**.
 
@@ -118,7 +118,9 @@ Rearrange report widgets on your custom analytics pages:[^5]
 
 5. Click and drag to position your widget as desired.
 
-    To resize a widget, hover over the bottom-right corner of a widget until the **{{< fa hand>}}** appears, then adjust the dimensions to your liking. 
+    To resize a widget, hover over the bottom-right corner of a widget until the **{{< fa hand>}}** appears, then adjust the dimensions to your liking.
+
+6. Click **Done Editing** to exit the editor.
 
 
 ## Manage analytics
@@ -133,8 +135,14 @@ Rearrange report widgets on your custom analytics pages:[^5]
 
 [^2]: [Add and manage model findings](/guide/model-validation/add-manage-model-findings.qmd)
 
-[^3]: [Manage business units](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
+[^3]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
-[^4]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd#manage-widgets)
+[^4]: [Manage business units](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
 
-[^5]: [Manage custom reports](manage-custom-reports.qmd#add-custom-analytics)
+[^5]: [Manage model stages](/guide/workflows/manage-model-stages.qmd)
+
+[^6]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd#available-finding-types)
+
+[^7]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd#manage-widgets)
+
+[^8]: [Manage custom reports](manage-custom-reports.qmd#add-custom-analytics)
