--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -11,7 +11,7 @@ a. Inventory fields require a **[type]{.smallcaps}**^[[Inventory field types](/g
     - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
     - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.^[[Add inventory field groups](/guide/model-inventory/manage-model-inventory-fields.qmd#add-inventory-field-groups)]
-    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^edit-fields]
+    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles.[^edit-fields]
 
 a. When you are satisfied with the setup of your inventory field, click **Save**.
 
@@ -36,7 +36,7 @@ a. Make your desired changes to your inventory field, then click **Save**.
 
     ::: {.callout title="Leave this field blank to leave permissions as default."}
     - By default, only the <br>[{{< fa hand >}} Customer Admin]{.bubble} role has write access.
-    - All other users will have read-only access unless specified under the **[write permissions]{.smallcaps}** as a model stakeholder type.
+    - All other users will have read-only access unless specified under the **[write permissions]{.smallcaps}** as a model stakeholder on a per model basis, or as a role on a per field basis across all models.
 
     ::: {.tc}
     [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
@@ -60,7 +60,7 @@ a. Make your desired changes to your inventory field, then click **Save**.
     - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
     - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.
-    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.
+    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles.
 
 1. When you are satisfied with the setup of your inventory field, click **Save**.
 
