--- a/site/guide/model-validation/_add-edit-finding-fields.qmd
+++ b/site/guide/model-validation/_add-edit-finding-fields.qmd
@@ -11,7 +11,7 @@ a. Finding fields require a **[type]{.smallcaps}**,^[[Finding field types](/guid
     - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
     - (Optional) You can also choose to indicate that a field is **[required when creating findings]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.^[[Add finding field groups](/guide/model-validation/manage-model-finding-fields.qmd#add-finding-field-groups)]
-    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types. or user roles.[^edit-finding-fields]
+    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles. Leave this field blank for default permissions where only the [{{< fa hand >}} Customer Admin]{.bubble} role has write access.[^edit-finding-fields]
 
 a. When you are satisfied with the setup of your finding field, click **Save**.
 
@@ -33,15 +33,12 @@ a. Make your desired changes to your finding field, then click **Save**.
 
 [^edit-finding-fields]:
 
-    ::: {.callout title="Leave this field blank to leave permissions as default."}
-    - By default, only the <br>[{{< fa hand >}} Customer Admin]{.bubble} role has write access.
-    - All other users will have read-only access unless specified under the **[write permissions]{.smallcaps}** as a model stakeholder on a per model basis, or as a role on a per field basis across all findings.
+    ::: {.callout}
+    ## All other users will have read-only access unless specified under the **[write permissions]{.smallcaps}**.
 
-    ::: {.tc}
-    [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+    - [**Model Stakeholders**](/guide/configuration/manage-model-stakeholder-types.qmd) — Write permissions on a per model basis.
+    - [**Application Roles**](/guide/configuration/manage-roles.qmd) — Write permissions on a per field basis across all findings.
 
-    :::
-    
     :::
 
 ::::
