--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -83,7 +83,7 @@ a, Click **Save Configuration** to apply your changes.
 1. Under Models, select **Model Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
 
     - Click **{{< fa plus >}} Add Field** to add a new field.
-    - Hover over a field and select **{{< fa pencil >}} Edit** under the Actions column to edit that field.
+    - Click on an existing field to edit that field.
 
 1. Inventory fields require a **[type]{.smallcaps}** and a **[name]{.smallcaps}**.
 
@@ -92,7 +92,7 @@ a, Click **Save Configuration** to apply your changes.
     - (Optional) You can also assign a field to a group.
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles.
 
-1. When you are satisfied with the setup of your inventory field, click **Save**.
+1. When you are satisfied with the setup of your inventory field, click **Save** for custom inventory fields and **Save Configuration** for core inventory fields.
 
 ::::
 
