--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -85,14 +85,14 @@ a, Click **Save Configuration** to apply your changes.
     - Click **{{< fa plus >}} Add Field** to add a new field.
     - Click on an existing field to edit that field.
 
-1. Inventory fields require a **[type]{.smallcaps}** and a **[name]{.smallcaps}**.
+1. Custom inventory fields require a **[type]{.smallcaps}** and a **[name]{.smallcaps}**.
 
     - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
     - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles.
 
-1. When you are satisfied with the setup of your inventory field, click **Save** for custom inventory fields and **Save Configuration** for core inventory fields.
+1. When you are satisfied with the setup of your inventory field, click **Save** for custom fields and **Save Configuration** for core fields.
 
 ::::
 
