--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -80,7 +80,7 @@ a, Click **Save Configuration** to apply your changes.
 :::: {.content-hidden unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Models, select **Model Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
+1. Under Models, select **Model Inventory Fields**. Here you can edit existing inventory fields, or add a new custom one:
 
     - Click **{{< fa plus >}} Add Field** to add a new field.
     - Click on an existing field to edit that field.
@@ -92,7 +92,7 @@ a, Click **Save Configuration** to apply your changes.
     - (Optional) You can also assign a field to a group.
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles.
 
-1. When you are satisfied with the setup of your inventory field, click **Save** for custom fields and **Save Configuration** for core fields.
+1. When you are satisfied with the setup of your inventory field, click **Save** for custom fields and **Save Configuration** for {{< var vm.product >}} default core fields.
 
 ::::
 
