--- a/site/guide/model-validation/_add-edit-finding-fields.qmd
+++ b/site/guide/model-validation/_add-edit-finding-fields.qmd
@@ -19,11 +19,9 @@ a. When you are satisfied with the setup of your finding field, click **Save**.
 
 To edit an existing finding field:
 
-a. Hover over the finding field you would like to edit.
+a. Click on the finding field you would like to edit.
 
     Expand any inventory field group to see more fields.^[[Add finding field groups](/guide/model-validation/manage-model-finding-fields.qmd#add-finding-field-groups)]
-
-a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, select **{{< fa pencil >}} Edit Details**.
 
 a. Make your desired changes to your finding field, then click **Save**.
 
@@ -50,7 +48,7 @@ a. Make your desired changes to your finding field, then click **Save**.
 1. Under Findings, select **Finding Fields**. Here you can edit existing finding fields, or add a new one:
 
     - Click **{{< fa plus >}} Add Field** to add a new field.
-    - Hover over a field and select **{{< fa pencil >}} Edit** under the Actions column to edit that field.
+    - Click on an existing field to edit that field.
 
 1. Finding fields require a **[type]{.smallcaps}**, a **[name]{.smallcaps}**, and a **[finding type]{.smallcaps}**.
 
