--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -43,7 +43,7 @@ a. Toggle the following options on or off:
     - **[show on registration]{.smallcaps}** — Show this field when registering models in your inventory.^[[Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)]
     - **[require on registration]{.smallcaps}** — Require input in this field when registering models in your inventory.
 
-a, Click **Save Configuration** to apply your changes.
+a. Click **Save Configuration** to apply your changes.
 
 
 
