--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -2,7 +2,7 @@
 
 ::: {.panel-tabset}
 
-#### Add inventory fields
+### Add inventory fields
 
 To add a new inventory field, click **{{< fa plus >}} Add Field**:
 
@@ -15,17 +15,37 @@ a. Inventory fields require a **[type]{.smallcaps}**^[[Inventory field types](/g
 
 a. When you are satisfied with the setup of your inventory field, click **Save**.
 
-#### Edit inventory fields
+### Edit inventory fields
 
-To edit an existing inventory field:
+#### Edit custom inventory fields
 
-a. Hover over the inventory field you would like to edit.
+Custom inventory fields are fields created by your organization.
+
+To edit an existing custom inventory field:
+
+a. Click on the custom inventory field you would like to edit.
 
     Expand any inventory field group to see more fields.^[[Add inventory field groups](/guide/model-inventory/manage-model-inventory-fields.qmd#add-inventory-field-groups)]
 
-a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, select **{{< fa pencil >}} Edit Details**.
-
 a. Make your desired changes to your inventory field, then click **Save**.
+
+#### Edit core fields
+
+Core fields are fields created by default by {{< var vm.product >}}.[^core-fields] To modify a core field:
+
+a. Click on the core inventory field you would like to edit.
+
+    Expand any inventory field group to see more fields.^[[Add inventory field groups](/guide/model-inventory/manage-model-inventory-fields.qmd#add-inventory-field-groups)]
+
+a. Toggle the following options on or off:
+
+    - **[disable field]{.smallcaps}** — Hide this field from all models in your inventory.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)]
+    - **[show on registration]{.smallcaps}** — Show this field when registering models in your inventory.^[[Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)]
+    - **[require on registration]{.smallcaps}** — Require input in this field when registering models in your inventory.
+
+a. Click **Save Configuration** to apply your changes.
+
+
 
 :::
 
@@ -42,24 +62,37 @@ a. Make your desired changes to your inventory field, then click **Save**.
 
     :::
 
+[^core-fields]:
+
+    **{{< var vm.product >}} core fields:**
+
+    - [Business Unit](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
+    - ID
+    - [Is Vendor Model](/about/glossary/glossary.qmd#vendor-model)
+    - Name
+    - Purpose
+    - Tier
+    - [Use Case](/guide/configuration/set-up-your-organization.qmd#manage-use-cases)
+    - Vendor Name
+
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Models, select **Model Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
+1. Under Models, select **Model Inventory Fields**. Here you can edit existing inventory fields, or add a new custom one:
 
     - Click **{{< fa plus >}} Add Field** to add a new field.
-    - Hover over a field and select **{{< fa pencil >}} Edit** under the Actions column to edit that field.
+    - Click on an existing field to edit that field.
 
-1. Inventory fields require a **[type]{.smallcaps}** and a **[name]{.smallcaps}**.
+1. Custom inventory fields require a **[type]{.smallcaps}** and a **[name]{.smallcaps}**.
 
     - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
     - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles.
 
-1. When you are satisfied with the setup of your inventory field, click **Save**.
+1. When you are satisfied with the setup of your inventory field, click **Save** for custom fields and **Save Configuration** for {{< var vm.product >}} default core fields.
 
 ::::
 
