--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -13,7 +13,7 @@ Review timelines of workflows running or previously run:
 
     If workflows are running or have previously run on your model, you can:
 
-    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific types of workflows.^[Workflow timelines on models include child workflows, such as workflows attached to findings. Filter for **Model Workflows Only** or **Finding Workflows Only**.]
 
     - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
         - **Active** — Workflows currently running.
@@ -58,7 +58,7 @@ Review timelines of workflows running or previously run:
 
     If workflows are running or have previously run on your model, you can:
 
-    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from model workflows only, or child finding workflows only.
 
     - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
         - **Active** — Workflows currently running.
