--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -13,9 +13,11 @@ Review timelines of workflows running or previously run:
 
     If workflows are running or have previously run on your model, you can:
 
+    - Click on any listed workflow to review the details of that specific workflow.
+
     - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific types of workflows.^[Workflow timelines on models include child workflows, such as workflows attached to findings. Filter for **Model Workflows Only** or **Finding Workflows Only**.]
 
-    - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
+    - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of all workflows by status:
         - **Active** — Workflows currently running.
         - **Scheduled** — Workflows slated to run in the future.
         - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
@@ -29,9 +31,11 @@ On the details page of your finding,^[[View and filter model findings](/guide/mo
 
 If workflows are running or have previously run on your finding, you can:
 
+- Click on any listed workflow to review the details of that specific workflow.
+
 - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
 
-- Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
+- Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of all workflows by status:
     - **Active** — Workflows currently running.
     - **Scheduled** — Workflows slated to run in the future.
     - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
@@ -58,6 +62,8 @@ Review timelines of workflows running or previously run:
 
     If workflows are running or have previously run on your model, you can:
 
+    - Click on any listed workflow to review the details of that specific workflow.
+
     - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from model workflows only, or child finding workflows only.
 
     - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
@@ -74,14 +80,16 @@ On the [details page of your finding](/guide/model-validation/view-filter-model-
 
 If workflows are running or have previously run on your finding, you can:
 
-- Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+    - Click on any listed workflow to review the details of that specific workflow.
 
-- Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
-    - **Active** — Workflows currently running.
-    - **Scheduled** — Workflows slated to run in the future.
-    - **Waiting** — Workflows in a {{< fa clock >}} Wait state.
-    - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.
-    - **Aborted** — Cancelled workflows.
-    - **Available** — Workflows available to be run manually.
+    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+
+    - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
+        - **Active** — Workflows currently running.
+        - **Scheduled** — Workflows slated to run in the future.
+        - **Waiting** — Workflows in a {{< fa clock >}} Wait state.
+        - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.
+        - **Aborted** — Cancelled workflows.
+        - **Available** — Workflows available to be run manually.
 
 ::::
