--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -9,29 +9,47 @@ Review timelines of workflows running or previously run:
 
 2. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
-3. On the landing page of your model, locate the Workflows section.
+3. On the landing page of your model, locate the Workflows section that shows a timeline of workflows associated with that model.
 
-    If workflows are running or have previously run on your model, you can:
+::: {.callout title="Workflow timeline controls"}
 
-    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+- Move timeline left or right — Click and drag or <kbd>Shift</kbd> + scroll wheel
+- Slow zoom in or out — <kbd>Alt</kbd> + scroll wheel
+- Quick zoom in or out — <kbd>Ctrl</kbd> + scroll wheel
+:::
 
-    - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
-        - **Active** — Workflows currently running.
-        - **Scheduled** — Workflows slated to run in the future.
-        - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
-        - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
-        - **Aborted** — Cancelled workflows.^[[Abort workflows](/guide/workflows/manage-workflows.qmd#abort-workflows)]
-        - **Available** — Workflows available to be run manually.^[[Initiate workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
+If workflows are running or have previously run on your model, you can:
+
+- Click on any listed workflow to review the details of that specific workflow.
+
+- Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific types of workflows.^[Workflow timelines on models include child workflows, such as workflows attached to findings. Filter for **Model Workflows Only** or **Finding Workflows Only**.]
+
+- Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of all workflows by status:
+    - **Active** — Workflows currently running.
+    - **Scheduled** — Workflows slated to run in the future.
+    - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
+    - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
+    - **Aborted** — Cancelled workflows.^[[Abort workflows](/guide/workflows/manage-workflows.qmd#abort-workflows)]
+    - **Available** — Workflows available to be run manually.^[[Initiate workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
 
 #### On findings
 
-On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the Workflows section.
+On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the Workflows section that shows a timeline of workflows associated with that finding.
+
+::: {.callout title="Workflow timeline controls"}
+
+- Move timeline left or right — Click and drag or <kbd>Shift</kbd> + scroll wheel
+- Slow zoom in or out — <kbd>Alt</kbd> + scroll wheel
+- Quick zoom in or out — <kbd>Ctrl</kbd> + scroll wheel
+:::
 
 If workflows are running or have previously run on your finding, you can:
 
+- Click on any listed workflow to review the details of that specific workflow.
+
 - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
 
-- Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
+- Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of all workflows by status:
     - **Active** — Workflows currently running.
     - **Scheduled** — Workflows slated to run in the future.
     - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
@@ -54,11 +72,13 @@ Review timelines of workflows running or previously run:
 
 2. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
-3. On the landing page of your model, locate the Workflows section.
+3. On the landing page of your model, locate the Workflows section that shows a timeline of workflows associated with that model.
 
     If workflows are running or have previously run on your model, you can:
 
-    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+    - Click on any listed workflow to review the details of that specific workflow.
+
+    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from model workflows only, or child finding workflows only.
 
     - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
         - **Active** — Workflows currently running.
@@ -70,18 +90,20 @@ Review timelines of workflows running or previously run:
 
 #### On findings
 
-On the [details page of your finding](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings){target="_blank"}, locate the Workflows section.
+On the [details page of your finding](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings){target="_blank"}, locate the Workflows section that shows a timeline of workflows associated with that finding.
 
 If workflows are running or have previously run on your finding, you can:
 
-- Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+    - Click on any listed workflow to review the details of that specific workflow.
 
-- Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
-    - **Active** — Workflows currently running.
-    - **Scheduled** — Workflows slated to run in the future.
-    - **Waiting** — Workflows in a {{< fa clock >}} Wait state.
-    - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.
-    - **Aborted** — Cancelled workflows.
-    - **Available** — Workflows available to be run manually.
+    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+
+    - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
+        - **Active** — Workflows currently running.
+        - **Scheduled** — Workflows slated to run in the future.
+        - **Waiting** — Workflows in a {{< fa clock >}} Wait state.
+        - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.
+        - **Aborted** — Cancelled workflows.
+        - **Available** — Workflows available to be run manually.
 
 ::::
