--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -38,6 +38,10 @@ listing:
     sort: "date desc"
     max-description-length: 300
     categories: false
+    exclude:
+      categories: 
+        - "admin ui"
+        - "hidden"
     sort-ui: false
     filter-ui: false
     fields: [date, title]
