Run make get-source

--- a/site/notebooks/code_samples/agents/langgraph_agent_simple_banking_demo.ipynb
+++ b/site/notebooks/code_samples/agents/langgraph_agent_simple_banking_demo.ipynb
@@ -231,7 +231,7 @@
     "    api_key=\"...\",\n",
     "    api_secret=\"...\",\n",
     "    model=\"...\",\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -274,6 +274,11 @@
     "# Local imports\n",
     "from banking_tools import AVAILABLE_TOOLS\n",
     "from validmind.tests import run_test\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_colwidth', None)\n",
+    "pd.set_option('display.width', None)\n",
+    "pd.set_option('display.max_rows', None)\n",
     "\n",
     "# Load environment variables if using .env file\n",
     "try:\n",
@@ -722,15 +727,7 @@
     "\n",
     "print(\"Banking Test Dataset Initialized in ValidMind!\")\n",
     "print(f\"Dataset ID: {vm_test_dataset.input_id}\")\n",
-    "print(f\"Dataset columns: {vm_test_dataset._df.columns}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(f\"Dataset columns: {vm_test_dataset._df.columns}\")\n",
     "vm_test_dataset._df.head(1)"
    ]
   },
@@ -754,7 +751,8 @@
     "vm_test_dataset.assign_predictions(vm_banking_model)\n",
     "\n",
     "print(\"Banking Agent Predictions Generated Successfully!\")\n",
-    "print(f\"Predictions assigned to {len(vm_test_dataset._df)} test cases\")"
+    "print(f\"Predictions assigned to {len(vm_test_dataset._df)} test cases\")\n",
+    "vm_test_dataset._df.head()"
    ]
   },
   {
@@ -772,11 +770,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_colwidth', 40)\n",
-    "pd.set_option('display.width', 120)\n",
-    "pd.set_option('display.max_colwidth', None)\n",
-    "print(\"Banking Test Dataset with Predictions:\")\n",
-    "vm_test_dataset._df.head()"
+    "# pd.set_option('display.max_colwidth', 40)\n",
+    "# pd.set_option('display.width', 120)\n",
+    "# pd.set_option('display.max_colwidth', None)\n",
+    "# print(\"Banking Test Dataset with Predictions:\")\n",
+    "# vm_test_dataset._df.head()"
    ]
   },
   {
