Getting ready for some new content

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -1,6 +1,16 @@
 ---
-title: "Integrations"
+title: "Managing integrations"
 date: last-modified
+listing:
+  - id: integrations-listing
+    type: grid
+    grid-columns: 2
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents:
+      - manage-integration-secrets.qmd 
+      - configure-connections.qmd
 ---
 
 Integrations connect ValidMind with the external tools your teams rely on so data, workflows, and reporting stay aligned without manual handoffs.
@@ -41,3 +51,6 @@ Initial releases of the integrations experience should deliver:
 - RBAC policies governing who can configure, run, or view integrations across teams.
 - Test results that reference the appropriate integration context and appear alongside findings.
 - Integration field exposure inside the enterprise model inventory lists for filtering and reporting.
+
+:::{#integrations-listing}
+:::
